// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> with read only mode disabled should render correctly 1`] = `
<div
  className="Layout"
  data-testid="Layout"
>
  <div
    className="page"
  >
    <header
      className="Header"
      data-testid="Header"
    >
      <div>
        <div>
          <div>
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "display": "inline-block",
                    "margin": 0,
                    "maxWidth": "100%",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "boxSizing": "border-box",
                      "display": "block",
                      "maxWidth": "100%",
                    }
                  }
                >
                  <img
                    alt=""
                    aria-hidden={true}
                    role="presentation"
                    src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNzUiIGhlaWdodD0iNzUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
                    style={
                      Object {
                        "border": "none",
                        "display": "block",
                        "margin": 0,
                        "maxWidth": "100%",
                        "padding": 0,
                      }
                    }
                  />
                </div>
                <img
                  alt="Resource Rank Logo"
                  decoding="async"
                  src="/_next/image?url=%2Fimg%2Flogo.svg&w=256&q=75"
                  srcSet="/_next/image?url=%2Fimg%2Flogo.svg&w=96&q=75 1x, /_next/image?url=%2Fimg%2Flogo.svg&w=256&q=75 2x"
                  style={
                    Object {
                      "border": "none",
                      "bottom": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": 0,
                      "left": 0,
                      "margin": "auto",
                      "maxHeight": "100%",
                      "maxWidth": "100%",
                      "minHeight": "100%",
                      "minWidth": "100%",
                      "objectFit": undefined,
                      "objectPosition": undefined,
                      "padding": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": 0,
                    }
                  }
                />
              </div>
            </a>
          </div>
          <div>
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Home
            </a>
          </div>
          <div>
            <a
              href="/topics"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Topics
            </a>
          </div>
          <div>
            <button
              onClick={[Function]}
            >
              Login
            </button>
          </div>
        </div>
      </div>
    </header>
    <div />
  </div>
  <footer
    className="Footer"
    data-testid="Footer"
  >
    <div>
      <div>
        <div>
          <h1>
            Our Mission
          </h1>
          <p>
            is to 
            <strong>
              simplify
            </strong>
             your learning journey. Learning can be 
            <strong>
              difficult
            </strong>
            , especially when starting. There are 
            <strong>
              millions
            </strong>
             of educational courses, videos, and books 
            <strong>
              scattered
            </strong>
             across the Internet.
          </p>
          <p>
            Resource Rank’s goal is to 
            <strong>
              consolidate
            </strong>
             all of these resources so that you can 
            <strong>
              quickly
            </strong>
             find the
             
            <strong>
              best
            </strong>
             resources for what you are learning.
          </p>
        </div>
        <div>
          <div
            style={
              Object {
                "boxSizing": "border-box",
                "display": "inline-block",
                "margin": 0,
                "maxWidth": "100%",
                "overflow": "hidden",
                "position": "relative",
              }
            }
          >
            <div
              style={
                Object {
                  "boxSizing": "border-box",
                  "display": "block",
                  "maxWidth": "100%",
                }
              }
            >
              <img
                alt=""
                aria-hidden={true}
                role="presentation"
                src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNzUiIGhlaWdodD0iNzUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
                style={
                  Object {
                    "border": "none",
                    "display": "block",
                    "margin": 0,
                    "maxWidth": "100%",
                    "padding": 0,
                  }
                }
              />
            </div>
            <noscript>
              <img
                alt="Resource Rank Logo"
                decoding="async"
                src="/img/logo.svg"
                srcSet="/_next/image?url=%2Fimg%2Flogo.svg&w=96&q=75 1x, /_next/image?url=%2Fimg%2Flogo.svg&w=256&q=75 2x"
                style={
                  Object {
                    "border": "none",
                    "bottom": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": 0,
                    "left": 0,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "maxWidth": "100%",
                    "minHeight": "100%",
                    "minWidth": "100%",
                    "objectFit": undefined,
                    "objectPosition": undefined,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  }
                }
              />
            </noscript>
            <img
              alt="Resource Rank Logo"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`<Layout /> with read only mode enabled should render correctly 1`] = `
<div
  className="Layout"
  data-testid="Layout"
>
  <div
    className="page"
  >
    <div>
      Application is in read-only mode.
    </div>
    <header
      className="Header"
      data-testid="Header"
    >
      <div>
        <div>
          <div>
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                style={
                  Object {
                    "boxSizing": "border-box",
                    "display": "inline-block",
                    "margin": 0,
                    "maxWidth": "100%",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "boxSizing": "border-box",
                      "display": "block",
                      "maxWidth": "100%",
                    }
                  }
                >
                  <img
                    alt=""
                    aria-hidden={true}
                    role="presentation"
                    src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNzUiIGhlaWdodD0iNzUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
                    style={
                      Object {
                        "border": "none",
                        "display": "block",
                        "margin": 0,
                        "maxWidth": "100%",
                        "padding": 0,
                      }
                    }
                  />
                </div>
                <img
                  alt="Resource Rank Logo"
                  decoding="async"
                  src="/_next/image?url=%2Fimg%2Flogo.svg&w=256&q=75"
                  srcSet="/_next/image?url=%2Fimg%2Flogo.svg&w=96&q=75 1x, /_next/image?url=%2Fimg%2Flogo.svg&w=256&q=75 2x"
                  style={
                    Object {
                      "border": "none",
                      "bottom": 0,
                      "boxSizing": "border-box",
                      "display": "block",
                      "height": 0,
                      "left": 0,
                      "margin": "auto",
                      "maxHeight": "100%",
                      "maxWidth": "100%",
                      "minHeight": "100%",
                      "minWidth": "100%",
                      "objectFit": undefined,
                      "objectPosition": undefined,
                      "padding": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": 0,
                    }
                  }
                />
              </div>
            </a>
          </div>
          <div>
            <a
              href="/"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Home
            </a>
          </div>
          <div>
            <a
              href="/topics"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Topics
            </a>
          </div>
          <div>
            <button
              onClick={[Function]}
            >
              Login
            </button>
          </div>
        </div>
      </div>
    </header>
    <div />
  </div>
  <footer
    className="Footer"
    data-testid="Footer"
  >
    <div>
      <div>
        <div>
          <h1>
            Our Mission
          </h1>
          <p>
            is to 
            <strong>
              simplify
            </strong>
             your learning journey. Learning can be 
            <strong>
              difficult
            </strong>
            , especially when starting. There are 
            <strong>
              millions
            </strong>
             of educational courses, videos, and books 
            <strong>
              scattered
            </strong>
             across the Internet.
          </p>
          <p>
            Resource Rank’s goal is to 
            <strong>
              consolidate
            </strong>
             all of these resources so that you can 
            <strong>
              quickly
            </strong>
             find the
             
            <strong>
              best
            </strong>
             resources for what you are learning.
          </p>
        </div>
        <div>
          <div
            style={
              Object {
                "boxSizing": "border-box",
                "display": "inline-block",
                "margin": 0,
                "maxWidth": "100%",
                "overflow": "hidden",
                "position": "relative",
              }
            }
          >
            <div
              style={
                Object {
                  "boxSizing": "border-box",
                  "display": "block",
                  "maxWidth": "100%",
                }
              }
            >
              <img
                alt=""
                aria-hidden={true}
                role="presentation"
                src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNzUiIGhlaWdodD0iNzUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
                style={
                  Object {
                    "border": "none",
                    "display": "block",
                    "margin": 0,
                    "maxWidth": "100%",
                    "padding": 0,
                  }
                }
              />
            </div>
            <noscript>
              <img
                alt="Resource Rank Logo"
                decoding="async"
                src="/img/logo.svg"
                srcSet="/_next/image?url=%2Fimg%2Flogo.svg&w=96&q=75 1x, /_next/image?url=%2Fimg%2Flogo.svg&w=256&q=75 2x"
                style={
                  Object {
                    "border": "none",
                    "bottom": 0,
                    "boxSizing": "border-box",
                    "display": "block",
                    "height": 0,
                    "left": 0,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "maxWidth": "100%",
                    "minHeight": "100%",
                    "minWidth": "100%",
                    "objectFit": undefined,
                    "objectPosition": undefined,
                    "padding": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  }
                }
              />
            </noscript>
            <img
              alt="Resource Rank Logo"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;
